  * -i mode which lets you ignore entire files and directories
    (Thanks Etienne Bruines)

1.1.0    2016-08-08
  * Better error checking for extremely large values to command
    line parameters (Thanks Matthew Fernandez)
  * Fix some boundary conditions in the range support added
    in 1.0.1 (Thanks Justas Lavišius)
  * On Linux, support touching/evicting/displaying block devices
    directly. This displays the underlying buffer cache, not the
    filesystem cache (Thanks to maq123 for the suggestion)
  * On Linux, open files with O_NOATIME so that we don't cause
    unnecessary disk activity recording access times
    (Thanks Mat R.)
  * Replaces a stat() call with an fstat() call which is slightly
    more efficient.
  * Skipped symlinks are no longer included in total file count
  * Closes file descriptors after locking memory since there is
    no need to keep them open. This makes it less likely you will
    hit the RLIMIT_NOFILE when using -l or -L.
  * TUNING.md file (Thanks to Artem Sheremet for the idea and
    to Vladimir Kotal for Solaris tuning info)

1.0.2    2015-12-04
  * Clean-up Makefile and improve its portability.
  * Documentation updates.

1.0.1    2015-10-16
  * Change default max file size (specified with -m) to
    SIZE_MAX instead of 500m. This is 4G on 32-bit systems
    and effectively unlimited on 64-bit systems.
    (Thanks Erik Garrison)
  * -p mode which lets you view/touch/evict/lock ranges of
    files instead of just whole files. (Thanks Justas Lavišius)
  * Update debian packaging files. (Thanks Luka Blaskovic)
  * Fix bug that prevented you from trying to crawl your
    entire filesystem from the root.
  * Fix to work with glibc 2.20. (Thanks Jim Garrison)
  * Fix format string warning when compiling with clang.
    (Thanks Mikolaj Golub)
  * Cleaner and better Makefile. (Thanks Emmanuel Kasper and
    Mikolaj Golub)
  * Don't double-count the same file that just happens to have