@@ -62,7 +62,11 @@ Follow symbolic links. With this option, vmtouch will descend into symbolic link
 
 =item -i <pattern>
 
-Ignores all files and directories that match the provided pattern. The pattern may include wildcards (remember to escape them from your shell). This option stops the crawl, so can be used to ignore directories and all their contents. Can be specified multiple times. Example: vmtouch -i .git -i '*.bak' .
+Can be specified multiple times. Ignores files and directories that match any of the provided patterns. The pattern may include wildcards (remember to escape them from your shell). This option stops the crawl, so can be used to ignore directories and all their contents. Example: vmtouch -i .git -i '*.bak' .
+
+=item -I <pattern>
+
+Can be specified multiple times. Only processes filenames matching one or more of the provided patterns. The pattern may include wildcards (remember to escape them from your shell). Example: vmtouch -I '*.c' -I '*.h' .
 
 =item -v
 
